--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
-# If you prefer the allow list template instead of the deny list, see community template:
-# https://github.com/github/gitignore/blob/main/community/Golang/Go.AllowList.gitignore
-#
 # Binaries for programs and plugins
 *.exe
 *.exe~
@@ -19,7 +16,33 @@
 
 # Go workspace file
 go.work
-go.work.sum
 
-# env file
-.env
+# System files in macOS
+*.DS_Store
+*.AppleDouble
+*.LSOverride
+
+# Logs
+*.log
+*.log*
+
+# Temporary files
+*.tmp
+*.swp
+
+# Build artifacts and cache
+*.build
+*.cache
+*.pid
+.go-build/
+
+# IDE and editor settings
+.vscode/
+.idea/
+*.iml
+
+# Documentation
+*.pdf
+
+# Vendor directory
+vendor/
